--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ transformers>=4.35.0
 torch>=2.0.0
 torchvision>=0.15.0
 Pillow>=10.0.0
+sentencepiece>=0.1.99
 supabase>=2.0.0
 python-dotenv>=1.0.0
 lxml>=4.9.0
