--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ torch>=2.0.0
 torchvision>=0.15.0
 Pillow>=10.0.0
 sentencepiece>=0.1.99
+protobuf>=3.20.0
 supabase>=2.0.0
 python-dotenv>=1.0.0
 lxml>=4.9.0
